--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,4 +3,16 @@ ul {
     list-style-type: none;
 }
 
-/* UV Input Color Coding */
+/* Main Title Styles */
+#main-title {
+    background-image: linear-gradient(to bottom right, #0066ff, #003366);
+    color: white;
+}
+
+/* Search for a City Styles */
+#search-btn {
+    border-radius: 15px;
+    background-color: #0066ff;
+    color: white;
+}
+
